--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-
+<main id="container">
 
     <div class="row">
         <div class="col-md-offset-2 col-md-4 text-center">
@@ -43,7 +43,7 @@
             <button id="rollButton" class="btn btn-default" type="submit">Roll</button>
         </div>
     </div>
-
+</main>
 
     <!-- JavaScript Libraries Section -->
     <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
