--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- CSS Section -->
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
     <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="Content/css/font-awesome.min.css">
     <link rel="stylesheet" href="Content/app.css">
     <title>Client Side Final</title>
 </head>
@@ -21,7 +20,7 @@
         <div class="col-md-offset-2 col-md-4 text-center">
             <img src="Content/images/dieOne.png" height="100px" width="100px" id="die1Image" />
         </div>
-        <div class="col-md-2 text-center">
+        <div class="col-md-2 text-center die2">
             <img src="Content/images/dieTwo.png" height="100px" width="100px" id="die2Image" />
         </div>
     </div>
@@ -31,7 +30,7 @@
             <p id="die1Paragraph">#</p>
         </div>
         
-        <div class="col-md-2 text-center">
+        <div class="col-md-2 text-center die2">
             <p id="die2Paragraph">#</p>
         </div>
     </div>
@@ -39,7 +38,7 @@
 
     <!--click roll button-->
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-4 col-md-offset-6">
             <button id="rollButton" class="btn btn-default" type="submit">Roll</button>
         </div>
     </div>
