--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+    author: Mallory Steele
+    program: click roll button to generate random numbers on the dice (images swap out)
+    date: 4/21/2016
+    
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +23,7 @@
 <body>
 
 <main id="container">
+    <h1>Roll the dice!</h1>
 
     <div class="row">
         <div class="col-md-offset-2 col-md-4 text-center">
