change image names

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <div class="row">
             <div class="col-md-offset-2 col-md-4 text-center">
-                <img src="Content/images/dieOne.png" height="100px" width="100px" id="die1Image" />
+                <img src="Content/images/die1.png" height="100px" width="100px" id="die1Image" />
             </div>
             <div class="col-md-2 text-center die2">
-                <img src="Content/images/dieTwo.png" height="100px" width="100px" id="die2Image" />
+                <img src="Content/images/die2.png" height="100px" width="100px" id="die2Image" />
             </div>
         </div>
 
