delete web config

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
     <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="Content/app.css">
-    <title>Client Side Final</title>
+    <title>Dice Roller</title>
 </head>
 
 <body>
