--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!--click roll button-->
         <div class="row">
             <div class="col-md-6 col-md-offset-4">
-                <button id="rollButton" class="btn btn-default" type="submit">Roll</button>
+                <button id="rollButton" class="btn btn-default">Roll</button>
             </div>
         </div>
     </main>
