--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
         <!--click roll button-->
         <div class="row">
-            <div class="col-md-6 col-md-offset-4">
-                <button id="rollButton" class="btn btn-default">Roll</button>
+            <div class="col-md-6 col-md-offset-4" id="rollButton">
+                <button class="btn btn-default">Roll</button>
             </div>
         </div>
     </main>
